Fixing navbar collapse position and background bug

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,7 +20,7 @@ body {
 }
 
 body > nav.navbar {
-  height: 50px;
+  min-height: 50px;
   padding-top: 0;
   padding-bottom: 0;
 }
